# drtaint-arm32

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  drtaint.cpp  drtaint.h  drtaint_helper.cpp  drtaint_helper.h  drtaint_shadow.c  drtaint_shadow.h  drtaint_simd.cpp  toolchain-arm32.cmake
app/: draslrharden.cpp  drtaint_demo.cpp  drtaint_only.cpp  drtaint_test.cpp
app/draslrharden/: CMakeLists.txt  draslrharden_app.c  draslrharden_cli.cpp
app/drmarker/: CMakeLists.txt  README.md  drmarker_app.cpp  drmarker_cli.cpp
app/drtaint_demo/: CMakeLists.txt  drtaint_demo_cli.cpp
app/drtaint_marker/: CMakeLists.txt  README.md  communication.cpp  communication.h  drtaint_marker_app.cpp  drtaint_marker_cli.c  drtaint_marker_cli.cpp  ida_plugin.py  mrc_map.cpp  mrc_map.h  taint_checking.cpp  taint_checking.h  taint_map.cpp  taint_map.h  taint_processing.cpp  taint_processing.h  tainted_opnd.h
app/drtaint_marker/http/: main  main.cpp  picohttpclient.hpp
app/drtaint_only/: CMakeLists.txt  README.md  drtaint_only_cli.cpp
app/drtaint_test/: CMakeLists.txt  README.md  drtaint_test_app.cpp  drtaint_test_app.h  drtaint_test_cli.cpp
core/: drtaint.cpp  drtaint_helper.cpp  drtaint_shadow.c  drtaint_simd.cpp
core/include/: drtaint.h  drtaint_helper.h  drtaint_instr_groups.h  drtaint_shadow.h  drtaint_template_utils.h  instr_groups.h  templates.h
dev/myfiles/: run.sh
dev/qemu/: README.md  install_deb.sh  launch_deb.sh  mount_deb_fs.sh  unmount_deb_fs.sh
doc/: asm_affect_flags.txt  asm_all.txt  asm_impl.txt  bugs.txt  launch.txt
doc/My work/: readme.txt
qemu/: README.md
scripts/: configure.sh  grab.sh  make.sh  move.sh  run.sh  run_fuzzer.sh  transfer.sh  upload.sh
tests/: Makefile  drtaint_demo.cpp  drtaint_test.cpp  drtaint_test.h  simple_argv.c  simple_code_leaks.c  simple_leaks.c
tests/simple/: simple.s  simple_thumb.s
